# jumprope-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE.txt  README.md
.github/workflows/: test.yml
bench/: Cargo.toml  README.md  build.rs  explore_parameters.js  rope.c  table.js
bench/src/: edittablestr.rs  main.rs  rope.rs
benches/: benches.rs
crdt-testdata/: Cargo.toml
crdt-testdata/src/: lib.rs
jumprope-wasm/: Cargo.toml  build_wasm.sh
jumprope-wasm/src/: lib.rs
rope-wasm/: Cargo.toml
rope-wasm/src/: lib.rs
rope_benches/: Cargo.toml  README.md  rope.c  rope.h
rope_benches/src/: main.rs  rope.rs
src/: buffered.rs  edittablestr.rs  fast_str_tools.rs  gapbuffer.rs  iter.rs  jumprope.rs  lib.rs  rope.rs  utils.rs
tests/: test.rs
