[package]
name = "jumprope"
version = "0.5.1"
authors = ["Joseph Gentle <me@josephg.com>"]
edition = "2021"
description = "Simple, fast rope (fancy string) library built on top of Skiplists"
repository = "https://github.com/josephg/jumprope-rs"
license = "ISC OR Apache-2.0"
exclude = [
    "benchmark_data/*",
    ".github/**",
]

[workspace]
members = ["jumprope-wasm", "rope_benches", "crdt-testdata"]

[features]
#default = ["ddos_protection", "wchar_conversion"]
default = ["ddos_protection"]
ddos_protection = []
wchar_conversion = []

[dependencies]
rand = { version = "0.8", features = ["small_rng"] }

[dev-dependencies]
criterion = "0.3.5"
crdt-testdata = { path = "./crdt-testdata" }

[[bench]]
name = "benches"
harness = false

[profile.release]
lto = true
codegen-units = 1

[profile.release.package.jumprope-wasm]
#opt-level = "s"
opt-level = 2


[package.metadata.docs.rs]
features = ["wchar_conversion"]