[package]
authors = ["Joseph Gentle <me@josephg.com>"]
edition = "2018"
name = "bench"
version = "0.1.0"

[build-dependencies]
cc = "1.0"

[dependencies]
criterion = { version = "0.2.5", features = ["real_blackbox"] }
rand = "0.5.5"
ropey = "0.9.2"
xi-rope = "0.2.0"
an-rope = { version = "0.3.1", features = ["tendril"] }

[dependencies.jumprope]
path = ".."
