[package]
authors = ["Joseph Gentle <me@josephg.com>"]
edition = "2018"
name = "bench"
version = "0.1.0"

[build-dependencies]
cc = "1.0"

[dependencies]
criterion = "0.3"
rand = "0.7"
rand_xorshift = "0.2"
ropey = "1.2"
xi-rope = "0.3.0"
an-rope = { version = "0.3.1", features = ["tendril"] }

[dependencies.jumprope]
path = ".."
