[package]
authors = ["Joseph Gentle <me@josephg.com>"]
edition = "2018"
name = "bench"
version = "0.1.0"

[build-dependencies]
cc = "1.0"

[dependencies]
criterion = "0.3"
rand = { version = "0.8", features = ["small_rng"] }
ropey = "1.3"
xi-rope = "0.3.0"
an-rope = { version = "0.3.1", features = ["tendril"] }
crdt-testdata = { path = "../../diamond-types/crates/crdt-testdata" }

[dependencies.jumprope]
path = ".."
