[package]
name = "jumprope-wasm"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["ddos_protection", "jumprope/wchar_conversion"]
#default = ["ddos_protection"]
#default = ["jumprope/wchar_conversion"]
ddos_protection = ["jumprope/ddos_protection"]

[dependencies]
wasm-bindgen = "0.2"

# Disable default-features to remove obsessive ddos protection by default to
# reduce code size. (42kb -> 33kb). SmallRng is still plenty secure for most
# applications.
jumprope = { path = "..", default-features = false }

# Needed for rand in wasm, regardless of whether entropy is used.
getrandom = { version = "0.2.3", features = ["js"] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
#console_error_panic_hook = { version = "0.1.6", optional = true }

wee_alloc = "0.4"
